# memoru

./: AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-and-cargo-publish.yml
src/: command.rs  main.rs
