[package]
name = "memoru"
version = "0.1.3"
edition = "2024"
description = "A simple CLI memo application built with Rust and SQLite3"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/memoru"
keywords = ["cli", "memo", "notes", "sqlite", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
rusqlite = "0.37.0"
clap = { version = "4.5.44", features = ["derive"] }
chrono = "0.4.41"
dirs = "6.0.0"
